particles library styles fixed for responsive design

--- a/main_rus.html
+++ b/main_rus.html
@@ -49,6 +49,9 @@
         <a id="link_contacts" href="#contacts">Написать мне</a>
       </div>
     </div>
+    <div id="game_container">
+      <img id="game_arrow" src="./assets/snow_game_rus.svg">
+    </div>
   </section>
 
   <section class="skills" id="skills">
