--- a/main_rus.html
+++ b/main_rus.html
@@ -219,6 +219,7 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
